--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ autom4te.cache
 compile
 config.*
 configure
+configure~
 depcomp
 install-sh
 libtool
@@ -25,4 +26,5 @@ missing
 */tsschecker*
 stamp-h1
 xcuserdata
-configure~
+.build_complete
+.idea
